# vulkan_gui

./: Cargo.toml
assets/: cube.gltf
examples/: self_animating_gui_app.rs  simple_gui_app.rs  simple_gui_app_font_size.rs  table_gui_app.rs
shaders/: marching_cubes.comp  marching_cubes.comp.spv  mesh.vert  skybox.frag  skybox.frag.spv  skybox.vert  skybox.vert.spv  text_image.frag.spv  vertex_definition.glsl
src/: ash_bootstrap.rs  base_vulkan.rs  buffers.rs  debug.rs  descriptors.rs  ktx.rs  lib.rs  loader.rs  pipelines.rs  skybox.rs  swapchain.rs  vk_imgui.rs
