[package]
name = "vulkan_gui"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
raw-window-handle = "0.6"
winit = { version = "0.29", default-features = false, features = ["rwh_06"] }
ash = { version = "0.38", features = ["loaded"] }
ash-window = { version = "0.13" }
chrono = "0.4"
image = "0.24"
gpu-allocator = { version = "0.27.0", features = ["vulkan"] }
imgui = { git = "https://github.com/imgui-rs/imgui-rs" }
imgui-winit-support = { git = "https://github.com/imgui-rs/imgui-rs" }
imgui-rs-vulkan-renderer = { git = "https://github.com/Sorrien/imgui-rs-vulkan-renderer/", features = [
    "gpu-allocator",
    "dynamic-rendering",
] }
nanoid = "0.4.0"

[dependencies.gltf]
version = "1"
features = ["names"]

[features]
validation_layers = []

[build-dependencies]
shaderc = "0.8"
