[package]
name = "vulkan_gui"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
raw-window-handle = "0.6"
winit = { version = "0.30", default-features = false, features = ["rwh_06"] }
ash = { version = "0.38", features = ["loaded"] }
ash-window = { version = "0.13" }
chrono = "0.4"
image = "0.25"
gpu-allocator = { version = "0.27", features = ["vulkan"] }
imgui-sys = { version = "0.12", git = "https://github.com/imgui-rs/imgui-rs" }
imgui = { version = "0.12", git = "https://github.com/imgui-rs/imgui-rs", features = ["tables-api"] }
imgui-winit-support = { git = "https://github.com/imgui-rs/imgui-winit-support" }
imgui-rs-vulkan-renderer = { git = "https://github.com/Sorrien/imgui-rs-vulkan-renderer/", features = [
    "gpu-allocator",
    "dynamic-rendering",
] }
nanoid = "0.4.0"
ash_bootstrap = { git = "https://github.com/Sorrien/ash_bootstrap/" }
clipboard-rs = "0.3.2"

[dependencies.gltf]
version = "1"
features = ["names"]

[features]
validation_layers = []

[build-dependencies]
shaderc = "0.8"
